<resources>
    <string name="app_name">TranslateDocs</string>
    <string name="choose_picture_from_gallery">Choose Picture From Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="translator">Translator</string>
    <string name="settings">Settings</string>
    <string name="user_s_photo">User\'s Photo</string>
    <string name="enter_text_to_translate">Enter Text to Translate</string>
    <string name="language_of_text">Language of Text</string>
    <string name="text_translation_here">Text Translation Here</string>
    <string name="translate">Translate</string>
    <string name="detected_text">Detected Text</string>
    <string name="translated_text">Translated Text</string>
    <string name="language_saved_message">Preferred language saved: %s</string>
    <string name="preference_reset">Preference Reset</string>

    <string name="language_english">English</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_french">French</string>
    <string name="language_german">German</string>
    <string name="language_portuguese">Portuguese</string>
    <string name="language_italian">Italian</string>
    <string name="language_romanian">Romanian</string>
    <string name="language_japanese">Japanese</string>
    <string name="language_chinese">Chinese</string>
    <string name="language_russian">Russian</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_hindi">Hindi</string>
    <string name="select_preferred_language">Select Preferred Language</string>
    <string name="save">Save</string>
    <string name="reset_preferences">Reset Preferences</string>
    <string name="set_text_recognizer">Set Text Recognizer</string>
    <string name="using_latin_recognizer">"Using Latin Text Recognizer"</string>
    <string name="using_japanese_recognizer">"Using Japanese Text Recognizer"</string>
    <string name="using_chinese_recognizer">"Using Chinese Text Recognizer"</string>
    <string name="my_email">RickDev1379@gmail.com</string>
    <string name="contact_me">Contact Me</string>
    <string name="reset_button">ResetButton</string>

    <string-array name="language_array">
        <item>@string/language_english</item>
        <item>@string/language_spanish</item>
        <item>@string/language_french</item>
        <item>@string/language_german</item>
        <item>@string/language_portuguese</item>
        <item>@string/language_italian</item>
        <item>@string/language_romanian</item>
        <item>@string/language_japanese</item>
        <item>@string/language_chinese</item>
        <item>@string/language_russian</item>
        <item>@string/language_arabic</item>
        <item>@string/language_hindi</item>
    </string-array>
    <string-array name="time_intervals">
        <item>5 sec</item>
        <item>15 sec</item>
        <item>1 min</item>
        <item>3 mins</item>
    </string-array>
</resources>