<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#018786"
    android:orientation="vertical">

    <include
        android:id="@+id/topbar"
        layout="@layout/topbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/gallery_Card_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        tools:layout_editor_absoluteX="15dp">

        <TextView
            android:id="@+id/gallery_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choose_picture_from_gallery"
            android:textAlignment="center"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/galleryicon100" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/take_Photo_Card_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toTopOf="@+id/translator_Card_View"
        app:layout_constraintTop_toBottomOf="@+id/topbar"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="15dp">

        <TextView
            android:id="@+id/take_photo_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/take_photo"
            android:textAlignment="center"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/cameraicon100" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/translator_Card_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toTopOf="@+id/settings_Card_View"
        app:layout_constraintTop_toBottomOf="@+id/topbar"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="29dp">

        <TextView
            android:id="@+id/translator_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/translator"
            android:textAlignment="center"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/translateicon100" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/settings_Card_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topbar"
        app:layout_constraintVertical_bias="0.813"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/settings_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/settingsicon100" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/recognizer_in_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/home_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_gravity="end"
        android:contentDescription="@string/reset_button"
        android:src="@drawable/reset_50"/>

</LinearLayout>