<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/topbar"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_of_text"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Spinner
        android:id="@+id/spinner_top"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:entries="@array/language_array"/>

    <ImageView
        android:id="@+id/microphone_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:src="@drawable/microphoneicon25"
        android:background="@drawable/border"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_To_Translate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#DDDDDD"
            android:gravity="top"
            android:hint="@string/enter_text_to_translate"
            android:inputType="textMultiLine"
            android:lines="6"
            android:scrollHorizontally="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/speaker_top"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/speaker_50"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/translate_up_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/translate"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:drawableEnd="@drawable/up_arrow"/>

        <Button
            android:id="@+id/translate_down_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawableEnd="@drawable/down_arrow"
            android:text="@string/translate" />
    </LinearLayout>

    <Spinner
        android:id="@+id/languages_To_Spinner"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:entries="@array/language_array"/>

    <ImageView
        android:id="@+id/microphone_respond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/microphoneicon25"
        android:background="@drawable/border"/>

    <ImageView
        android:id="@+id/speaker_bottom"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/speaker_50"
        android:layout_marginStart="32dp"
        android:background="@drawable/border"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_To_Translate_To"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#DDDDDD"
            android:gravity="top"
            android:hint="@string/enter_text_to_translate"
            android:inputType="textMultiLine"
            android:lines="6"
            android:scrollHorizontally="false" />

    </com.google.android.material.textfield.TextInputLayout>





</LinearLayout>